Crouch turn left & right
The right version is just an inverted version of the left one so it was easy to make ¯_(ツ)_/¯

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@ NG_Settings.bin
 db_patches_crash.bin
 NG_Settings.bin
 *_warm_up_log.txt
+flep.cfg
+Graphics\Wads\*.3ds
+Graphics\Wads\*.tga
+Graphics\Wads\*.trw
