Experimental: ledge off animations when standing (both sides)
Ledge off back: script is working, animation is done. Sometimes seems to get triggered when it should not, in fact it's just that TRNG doesn't rotate Lara in the correct orientation.

Ledge off front: script is working, animation is not done yet. Haven't experienced issues (yet?) with it.

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,8 @@ flep.cfg
 /Graphics/Wads/*.3ds
 /Graphics/Wads/*.tga
 /Graphics/Wads/*.trw
+Graphics/Wads/catatest.was
+Graphics/Wads/catatest.wad
+Graphics/Wads/catatest.swd
+Graphics/Wads/catatest.sfx
+Graphics/Wads/catatest.sam
