--- a/flep.cfg
+++ b/flep.cfg
@@ -1,18 +1,19 @@
 presetversion=1.1
  silentpatch=0
- developermode=0
- developerview=0
+ developermode=1
+ developerview=1
  defaultpatchset=patches.flp
  maxparameters=30
  defaultexename=tomb4.exe
  lastpreset=
- winposx=5835
- winposy=3435
+ winposx=4695
+ winposy=4410
  windowtitle=FLEP
  abouttext1=FLEP - version 1.1.//Based on TREP source code.
  abouttext2=Source code by Ensi.//Modified and refactored by Lwmte.
  abouttext3=Listen to the flowers grow.//God is an astronaut.
- lastfile=tomb4.exe,6699AAD3
+ lastfile=tomb4.exe,80B75F53
+ patchpreset=Delete tomb4.exe unused resources,0
  patchpreset=Extend Tomb4.exe size,1
  patchpreset=Font Customizer,0,5|128,128,128|128,128,128|192,128,64|64,16,0|224,192,0|64,32,0|128,128,128|16,16,16|150
  patchpreset=GFX1 Customizer,0,0|24|192|0|192|0|0,0,0|255|32|96|32|16|48|28|28|47,47,0|0,0,0|255|255|0,0,0|0,0,0|0,0,0|79|0,0,0|32760|8|48|5|24|7|7|2|0,0,0
@@ -53,6 +54,8 @@ presetversion=1.1
  patchpreset=Monkeyswing: 180° turn (move),0,448
  patchpreset=Roll key setting,0,146|146
  patchpreset=Add Lara's Home entry to title menu,0,Lara's Home|2|1|1
+ patchpreset=Save Folder,0
+ patchpreset=Lara's Ponytail Position Changer,0,-4|-4|-48|-52|-48|-50|44|-48|-50
  patchpreset=Wall climbing mid-point adjuster,1,26|28|27|29
  patchpreset=Grab frame set for standing jump,0,12
  patchpreset=Change shiny sprite,0,11|11
@@ -98,3 +101,78 @@ presetversion=1.1
  patchpreset=Smoke emitter black OCB 13 settings,0,0,0,0|8|64,64,64|10|2|28|128|0|2|8|538|2|3|-8|-8|15|0
  patchpreset=Smoke emitter black OCB 14 settings,0,0,0,0|8|64,64,64|10|2|28|128|0|2|8|538|2|3|-8|-8|15|0
  patchpreset=Smoke emitter black OCB 15 settings,0,0,0,0|8|64,64,64|10|2|28|128|0|2|8|538|2|3|-8|-8|15|0
+ patchpreset=Change healing system,0,500|1000|500|1000
+ patchpreset=Fix Medipack Hotkeys bug,0
+ patchpreset=Disable Medipack Hotkeys,0
+ patchpreset=Vertex shader base,0
+ patchpreset=Vertex shader rule 1,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 2,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 3,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 4,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 5,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 6,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 7,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 8,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 9,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 10,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 11,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 12,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 13,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 14,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 15,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 16,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 17,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 18,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 19,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 20,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 21,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 22,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 23,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 24,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 25,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 26,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 27,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 28,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 29,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 30,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 31,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 32,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 33,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 34,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 35,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 36,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 37,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 38,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 39,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 40,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 41,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 42,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 43,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 44,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 45,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 46,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 47,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 48,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 49,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 50,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 51,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 52,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 53,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 54,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 55,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 56,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 57,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 58,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 59,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 60,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 61,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 62,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 63,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Vertex shader rule 64,0,0|0|0|0|0|0|0,0,0|0|0,0,0|0
+ patchpreset=Remap bubble array,0
+ patchpreset=Single gun with PULSE (bugfixed),0
+ patchpreset=Pigtail: gravity,0,10
+ patchpreset=Flat shading mode,0
+ patchpreset=Disable all dynamic lights,0
+ patchpreset=Remove hardcoded sound when Lara surfaces,0
+ patchpreset=Fix hysteresis in one click deep water,1
