Ledge off animations while standing
Just done the front version of the animation (and fixed the double-frame that appeared in the back version). Still the crouch version to do, should be easy after making the front version for the stance.
Next step is doing that also for when:
* she's running
* she starts falling
* she's sliding

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ Graphics/Wads/catatest.wad
 Graphics/Wads/catatest.swd
 Graphics/Wads/catatest.sfx
 Graphics/Wads/catatest.sam
+tomb4.bak_before_new_flep_patches.exe
