Added SAS to remake his animations
Animations done:
- Walk
- Run
- Run to walk
- Stance to run
- Stance to walk
- Stance
Progress is tracked in issue #4
Tests are made in the TE level. Lara starts just in front of the trigger, take a step to trigger the SAS (he goes into guard mode until you shoot him)
The SAS object is from Condition Zero 2, imported by Silent Viper: https://www.trsearch.org/item/1183

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,11 @@ Graphics/Wads/catatest.swd
 Graphics/Wads/catatest.sfx
 Graphics/Wads/catatest.sam
 tomb4.bak_before_new_flep_patches.exe
+*.mqo
+*.3ds
+Graphics/Wads/*.tga
+Graphics/Wads/*/*.tga
+Data/demo3.tr4
+Maps/*/*-*-*.prj2
+Maps/Demo/demo3.prj2
+Graphics/Wads/conditionzerosas/bak
