Ladder off top left
I mean I have both versions, but one is just an automatically mirrored version of the other, so the beginning and the end positions obviously aren't what they should be.
Also I'll probably need some help: one of them triggers when it should, the other one won't. Please end my suffering.

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,8 @@ Data/demo3.tr4
 Maps/*/*-*-*.prj2
 Maps/Demo/demo3.prj2
 Graphics/Wads/conditionzerosas/bak
+Graphics/Wads/shotgunanim/lara.was
+Graphics/Wads/shotgunanim/lara.wad
+Graphics/Wads/shotgunanim/lara.swd
+Graphics/Wads/shotgunanim/lara.sfx
+Graphics/Wads/shotgunanim/lara.sam
