Much stuff. Little change.
- Added landing variation when jumping over a 4 clicks block (+ specific transition to run & to compress).
- Hopefully slightly better looking Slide forward to run animation (also added missing sounds).
- Fixed a wrong Next Frame value when grabbing a monkey ceiling from jumping up
- Added a very slightly  "improved" BADDY_1 just for the sake of it but nothing drastic (he now has a stand to run transition, a stop running to aim animation, slightly faster climbing animations, and... that's about it).
- Increased CH60 to CH70 for the LARA_JUMP sound. Because.

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,9 @@ db_patches_crash.bin
 NG_Settings.bin
 *_warm_up_log.txt
 flep.cfg
+*t5m*.*
+*.trmvb
+*.zip
 /Graphics/Wads/*.3ds
 /Graphics/Wads/*.tga
 /Graphics/Wads/*.trw
@@ -47,3 +50,22 @@ Graphics/Wads/shotgunanim/lara.wad
 Graphics/Wads/shotgunanim/lara.swd
 Graphics/Wads/shotgunanim/lara.sfx
 Graphics/Wads/shotgunanim/lara.sam
+Graphics/Wads/classicaod2.wad2
+Graphics/Wads/classicaod.wad2
+Graphics/Wads/flareanim/flareanim.sam
+Graphics/Wads/flareanim/flareanim.sfx
+Graphics/Wads/flareanim/flareanim.swd
+Graphics/Wads/flareanim/flareanim.wad
+Graphics/Wads/flareanim/flareanim.was
+Graphics/Wads/ORIGINAL_baddy_1.sam
+Graphics/Wads/ORIGINAL_baddy_1.sfx
+Graphics/Wads/ORIGINAL_baddy_1.swd
+Graphics/Wads/ORIGINAL_baddy_1.wad
+Graphics/Wads/ORIGINAL_baddy_1.was
+Graphics/Wads/test.wad2
+Graphics/Wads/test.xml
+Graphics/Wads/testglasses/testglasses.sam
+Graphics/Wads/testglasses/testglasses.sfx
+Graphics/Wads/testglasses/testglasses.swd
+Graphics/Wads/testglasses/testglasses.wad
+Graphics/Wads/testglasses/testglasses.was
