Free fall to Swim (+ merged FLEP patches)
Not sure I like the free fall to swim anim yet, we'll see
And I merged all the "official" patches with the experimental patches from ChocolateFan so you can open FLEP without issue (it uses Patches.new_combined.flp file)

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,4 @@ Graphics/Wads/testglasses/testglasses.sfx
 Graphics/Wads/testglasses/testglasses.swd
 Graphics/Wads/testglasses/testglasses.wad
 Graphics/Wads/testglasses/testglasses.was
+flep.bak.cfg
