Clean up & README overhaul & shovel sounds
README now includes detailed information on using the animations, credits, etc.

Some files have been removed (old scripts, NGLE level), some have been splitted (the animation script files).

Shovel sounds have been added to the shovel digging animation so it is now "really" complete (sounds have been taken from Indiana Jones and the Infernal Machine, but I'm pretty sure they're just from some generic sound library)

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,5 @@ Graphics/Wads/testglasses/testglasses.swd
 Graphics/Wads/testglasses/testglasses.wad
 Graphics/Wads/testglasses/testglasses.was
 flep.bak.cfg
+Maps/Demo/backup/
+Graphics/Wads/backup_demo/
