Updated FLEP patches
The patches file has the date of the update it's based on in its name, so it's easy to see how up to date it is, and it also states that it has experimental embedded as well.
And I removed the alternate patches files because it was getting confusing.

--- a/flep.cfg
+++ b/flep.cfg
@@ -2,12 +2,12 @@ presetversion=1.1
  silentpatch=0
  developermode=0
  developerview=0
- defaultpatchset=patches.new_combined.flp
+ defaultpatchset=patches.2020-10-15.plus_experimental_patches.flp
  maxparameters=30
  defaultexename=tomb4.exe
  lastpreset=
- winposx=-19695
- winposy=10035
+ winposx=4875
+ winposy=2160
  windowtitle=FLEP
  abouttext1=FLEP - version 1.1.//Based on TREP source code.
  abouttext2=Source code by Ensi.//Modified and refactored by Lwmte.
@@ -176,6 +176,21 @@ presetversion=1.1
  patchpreset=Disable all dynamic lights,0
  patchpreset=Remove hardcoded sound when Lara surfaces,0
  patchpreset=Fix hysteresis in one click deep water,1
+ patchpreset=Add [Kills] to statistics,0,Kills (level)
+ patchpreset=Global [Kills] Statistics entry,0
+ patchpreset=Fast alignment,0
+ patchpreset=Violent bats,0
+ patchpreset=Ladder to crawlspace,0
+ patchpreset=Motorbike and Jeep explosion in water,0,256|256
+ patchpreset=Remove hardcoded Jeep audio,0
+ patchpreset=Shotgun ammo parameters,0,1820|6|5460|6
+ patchpreset=Disable manual aiming,0
+ patchpreset=Enhance torch flame,0
+ patchpreset=Fix cogwheel animation skip,0
+ patchpreset=Allow crouching while holding any weapon,0
+ patchpreset=Fix sprite bug,0
+ patchpreset=Footstep Sound Customizer,0,0|5|3|2|1|9|9|4|6|5|3|9|4|6|0|0|288
+ patchpreset=Enable all footstep sound effects,0
  patchpreset=Standing jump grab animation,1,29|0
  patchpreset=Ledge release animation,0,28|9
  patchpreset=Throw flare frame number,0,21|33
