--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,10 @@ Sound/LevelSFX Creator/SoundsTDR.txt
 Sound/Samples_TDR
 Sound/Samples/Lara_Voice/old/
 Sound/Samples/Lara_Voice/extracted/
+Graphics/BtB2020_Outfit
+Graphics/Kapu_Tr2GymRemakeWithJoints
+Graphics/Wads/KurtisBaddy/BeforeMovingTorso
+Graphics/Winter-Green.*
+Graphics/Wads/classicaod*
+Data/*.tga
+Data/*.bmp
