FLEP update + Use torch animations

--- a/flep.cfg
+++ b/flep.cfg
@@ -2,19 +2,18 @@ presetversion=1.1
  silentpatch=0
  developermode=0
  developerview=0
- defaultpatchset=patches.2020-10-15.plus_experimental_patches.flp
+ defaultpatchset=patches.2021-07-21.plus_experimental_patches.flp
  maxparameters=30
  defaultexename=tomb4.exe
  lastpreset=
- winposx=900
- winposy=5655
+ winposx=13995
+ winposy=3615
  windowtitle=FLEP
  abouttext1=FLEP - version 1.1.//Based on TREP source code.
  abouttext2=Source code by Ensi.//Modified and refactored by Lwmte.
  abouttext3=Listen to the flowers grow.//God is an astronaut.
- lastfile=tomb4.exe,71279008
- patchpreset=Delete tomb4.exe unused resources,1
- patchpreset=Extend Tomb4.exe size,1
+ lastfile=patches.bin,163F7D85
+ lastfile=tomb4.exe,970A2B97
  patchpreset=Font Customizer,0,5|128,128,128|128,128,128|192,128,64|64,16,0|224,192,0|64,32,0|128,128,128|16,16,16|150
  patchpreset=GFX1 Customizer,0,0|24|192|0|192|0|0,0,0|255|32|96|32|16|48|28|28|47,47,0|0,0,0|255|255|0,0,0|0,0,0|0,0,0|79|0,0,0|32760|8|48|5|24|7|7|2|0,0,0
  patchpreset=GFX2 Customizer,0,8|3|9|8|4|16|96,48,0|16|16|12|10|-1|-1|40|24|51|96|411066368|19922992|5|4|16|1|3|8|192,192,192|128,128,128|12|6|4|3|64|224|4|112,128,128|64
@@ -55,7 +54,7 @@ presetversion=1.1
  patchpreset=Roll key setting,0,446|146
  patchpreset=Add Lara's Home entry to title menu,0,Lara's Home|2|1|1
  patchpreset=Save Folder,0
- patchpreset=Lara's Ponytail Position Changer,0,-4|-4|-48|-52|-48|-50|44|-48|-50
+ patchpreset=Lara's Ponytail Position Changer,1,-4|0|-48|-52|-48|-50|44|-48|-50
  patchpreset=Wall climbing mid-point adjuster,1,26|28|27|29
  patchpreset=Grab frame set for standing jump,0,12
  patchpreset=Change shiny sprite,0,11|11
@@ -185,12 +184,45 @@ presetversion=1.1
  patchpreset=Remove hardcoded Jeep audio,0
  patchpreset=Shotgun ammo parameters,0,1820|6|5460|6
  patchpreset=Disable manual aiming,0
- patchpreset=Enhance torch flame,0
+ patchpreset=Enhance torch flame,1
  patchpreset=Fix cogwheel animation skip,0
  patchpreset=Allow crouching while holding any weapon,0
  patchpreset=Fix sprite bug,0
  patchpreset=Footstep Sound Customizer,1,0|7|3|2|1|8|9|4|6|9|10|9|12|13|14|15|288
  patchpreset=Enable all footstep sound effects,1
+ patchpreset=Change shockwave damage,0,1.0
+ patchpreset=Wireframe mode,0
+ patchpreset=Free camera: Lock,0
+ patchpreset=Sample file size,1,262234
+ patchpreset=Sample rate,0,22050
+ patchpreset=Sample buffer array,1
+ patchpreset=Reverb base,1
+ patchpreset=Reverb classic mode,0,0|0|0|0|0
+ patchpreset=Reverb advanced mode,1
+ patchpreset=Custom 1,0,0|0|0.0|0.0|0.0|0|0.0|0|0.0|0.0|0.0|0.0
+ patchpreset=Custom 2,0,0|0|0.0|0.0|0.0|0|0.0|0|0.0|0.0|0.0|0.0
+ patchpreset=Custom 3,0,0|0|0.0|0.0|0.0|0|0.0|0|0.0|0.0|0.0|0.0
+ patchpreset=Custom 4,0,0|0|0.0|0.0|0.0|0|0.0|0|0.0|0.0|0.0|0.0
+ patchpreset=Custom 5,0,0|0|0.0|0.0|0.0|0|0.0|0|0.0|0.0|0.0|0.0
+ patchpreset=Custom 6,0,0|0|0.0|0.0|0.0|0|0.0|0|0.0|0.0|0.0|0.0
+ patchpreset=Custom 7,0,0|0|0.0|0.0|0.0|0|0.0|0|0.0|0.0|0.0|0.0
+ patchpreset=Custom 8,0,0|0|0.0|0.0|0.0|0|0.0|0|0.0|0.0|0.0|0.0
+ patchpreset=Custom 9,0,0|0|0.0|0.0|0.0|0|0.0|0|0.0|0.0|0.0|0.0
+ patchpreset=Custom 10,0,0|0|0.0|0.0|0.0|0|0.0|0|0.0|0.0|0.0|0.0
+ patchpreset=Custom 11,0,0|0|0.0|0.0|0.0|0|0.0|0|0.0|0.0|0.0|0.0
+ patchpreset=Custom 12,0,0|0|0.0|0.0|0.0|0|0.0|0|0.0|0.0|0.0|0.0
+ patchpreset=Custom 13,0,0|0|0.0|0.0|0.0|0|0.0|0|0.0|0.0|0.0|0.0
+ patchpreset=Custom 14,0,0|0|0.0|0.0|0.0|0|0.0|0|0.0|0.0|0.0|0.0
+ patchpreset=Custom 15,0,0|0|0.0|0.0|0.0|0|0.0|0|0.0|0.0|0.0|0.0
+ patchpreset=Custom 16,0,0|0|0.0|0.0|0.0|0|0.0|0|0.0|0.0|0.0|0.0
+ patchpreset=24 Savegame Slots (bugfixed),0
+ patchpreset=Title menu adjustment,0,320|144|128
+ patchpreset=Remove Ahmet flame death,0
+ patchpreset=Remove Small Scorpion poison hack,0,512
+ patchpreset=Remove poison screen effect,0
+ patchpreset=Show HP bar in inventory,0
+ patchpreset=Ammo Counter / Flare Timer,0,1|30|6|9|1|6
+ patchpreset=Fix sound radius bug,1
  patchpreset=Standing jump grab animation,1,29|0
  patchpreset=Ledge release animation,0,28|9
  patchpreset=Throw flare frame number,0,21|33
