--- a/Engine/flep.cfg
+++ b/Engine/flep.cfg
@@ -6,13 +6,13 @@ presetversion=1.1
  maxparameters=30
  defaultexename=tomb4.exe
  lastpreset=
- winposx=6360
- winposy=4725
+ winposx=795
+ winposy=5715
  windowtitle=FLEP
  abouttext1=FLEP - version 1.1.//Based on TREP source code.
  abouttext2=Source code by Ensi.//Modified and refactored by Lwmte.
  abouttext3=Listen to the flowers grow.//God is an astronaut.
- lastfile=patches.bin,EF287CD1
+ lastfile=patches.bin,60E76EB7
  lastfile=tomb4.exe,1B875DDF
  patchpreset=Font Customizer,0,5|128,128,128|128,128,128|192,128,64|64,16,0|224,192,0|64,32,0|128,128,128|16,16,16|150
  patchpreset=GFX1 Customizer,0,0|24|192|0|192|0|0,0,0|255|32|96|32|16|48|28|28|47,47,0|0,0,0|255|255|0,0,0|0,0,0|0,0,0|79|0,0,0|32760|8|48|5|24|7|7|2|0,0,0
@@ -225,11 +225,15 @@ presetversion=1.1
  patchpreset=Fix sound radius bug,1
  patchpreset=Upward standing jump ledge grab animation,1,29|0
  patchpreset=Ledge release animation,1,28|8
- patchpreset=Pickup flare frames,1,20|22|16
+ patchpreset=Pickup flare frames,1,16|22|16
  patchpreset=Pickup item frames,1,18|15|19|15|45|33|123
- patchpreset=Jump delay,1
+ patchpreset=Jump delay,0
  patchpreset=Dive delay,1,0
  patchpreset=Crawlspace pickup,1,22
  patchpreset=Prevent camera position freeze,1
  patchpreset=Customize sas gun,0,0|-40|272|7|0|300|64|7
  patchpreset=Fix bottom right corner bug,0
+ patchpreset=TR2Main widescreen,1,240
+ patchpreset=Fix jumping through objects,1
+ patchpreset=Static collision,0
+ patchpreset=Fix inconsistent camera angle when hanging,1
